APS-4668 Add Admin UI User selection by name
